Finally fixed issues related to overflow scrolling on mobile devices (Had the time :) )

--- a/default/css/sky.css
+++ b/default/css/sky.css
@@ -565,19 +565,30 @@ body {
     width: 20px !important;
     height: 20px !important;
   }
+
+  #games-list img {
+    width: 200px !important;
+    height: 120px !important;
+  }
 }
 
 @media (max-width: 420px) {
   #menu {
     left: 59%;
   }
-
-  
 }
 
 @media (max-width: 380px) {
   body {
     overflow-x: auto;
+  }
+
+  .aboutTable {
+    width: 300px;
+  }
+
+  .aboutTable > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(2) > p {
+    text-align: left !important;
   }
 
   .pictureContainer {
@@ -635,8 +646,9 @@ body {
   }
 
   .email-about {
-    width: 210px;
+    width: 150px;
     display: inline-block;
+    text-overflow: ellipsis;
   }
 
   .aboutTable > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(2) > p {
